WiFi/hello_world/build/log/idf_py_stdout_output_3963
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/build/bootloader/esp-idf/esptool_py && /home/radek/.espressif/python_env/idf5.4_py3.10_env/bin/python /home/radek/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x6570 bytes. 0xa90 bytes (9%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/home/radek/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20240906/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-3602-ga97a7b0962\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/build/config -I/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main -I/home/radek/esp-idf/components/newlib/platform_include -I/home/radek/esp-idf/components/freertos/config/include -I/home/radek/esp-idf/components/freertos/config/include/freertos -I/home/radek/esp-idf/components/freertos/config/xtensa/include -I/home/radek/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/radek/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/radek/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/radek/esp-idf/components/freertos/esp_additions/include -I/home/radek/esp-idf/components/esp_hw_support/include -I/home/radek/esp-idf/components/esp_hw_support/include/soc -I/home/radek/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/radek/esp-idf/components/esp_hw_support/dma/include -I/home/radek/esp-idf/components/esp_hw_support/ldo/include -I/home/radek/esp-idf/components/esp_hw_support/debug_probe/include -I/home/radek/esp-idf/components/esp_hw_support/port/esp32/. -I/home/radek/esp-idf/components/esp_hw_support/port/esp32/include -I/home/radek/esp-idf/components/heap/include -I/home/radek/esp-idf/components/heap/tlsf -I/home/radek/esp-idf/components/log/include -I/home/radek/esp-idf/components/soc/include -I/home/radek/esp-idf/components/soc/esp32 -I/home/radek/esp-idf/components/soc/esp32/include -I/home/radek/esp-idf/components/soc/esp32/register -I/home/radek/esp-idf/components/hal/platform_port/include -I/home/radek/esp-idf/components/hal/esp32/include -I/home/radek/esp-idf/components/hal/include -I/home/radek/esp-idf/components/esp_rom/include -I/home/radek/esp-idf/components/esp_rom/esp32/include -I/home/radek/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/radek/esp-idf/components/esp_rom/esp32 -I/home/radek/esp-idf/components/esp_common/include -I/home/radek/esp-idf/components/esp_system/include -I/home/radek/esp-idf/components/esp_system/port/soc -I/home/radek/esp-idf/components/esp_system/port/include/private -I/home/radek/esp-idf/components/xtensa/esp32/include -I/home/radek/esp-idf/components/xtensa/include -I/home/radek/esp-idf/components/xtensa/deprecated_include -I/home/radek/esp-idf/components/lwip/include -I/home/radek/esp-idf/components/lwip/include/apps -I/home/radek/esp-idf/components/lwip/include/apps/sntp -I/home/radek/esp-idf/components/lwip/lwip/src/include -I/home/radek/esp-idf/components/lwip/port/include -I/home/radek/esp-idf/components/lwip/port/freertos/include -I/home/radek/esp-idf/components/lwip/port/esp32xx/include -I/home/radek/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/radek/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/radek/esp-idf/components/esp_wifi/include -I/home/radek/esp-idf/components/esp_wifi/wifi_apps/include -I/home/radek/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/radek/esp-idf/components/esp_wifi/include/local -I/home/radek/esp-idf/components/esp_event/include -I/home/radek/esp-idf/components/esp_phy/include -I/home/radek/esp-idf/components/esp_phy/esp32/include -I/home/radek/esp-idf/components/esp_netif/include -I/home/radek/esp-idf/components/driver/deprecated -I/home/radek/esp-idf/components/driver/i2c/include -I/home/radek/esp-idf/components/driver/touch_sensor/include -I/home/radek/esp-idf/components/driver/twai/include -I/home/radek/esp-idf/components/driver/touch_sensor/esp32/include -I/home/radek/esp-idf/components/esp_pm/include -I/home/radek/esp-idf/components/esp_ringbuf/include -I/home/radek/esp-idf/components/esp_driver_gpio/include -I/home/radek/esp-idf/components/esp_driver_pcnt/include -I/home/radek/esp-idf/components/esp_driver_gptimer/include -I/home/radek/esp-idf/components/esp_driver_spi/include -I/home/radek/esp-idf/components/esp_driver_mcpwm/include -I/home/radek/esp-idf/components/esp_driver_ana_cmpr/include -I/home/radek/esp-idf/components/esp_driver_i2s/include -I/home/radek/esp-idf/components/esp_driver_sdmmc/include -I/home/radek/esp-idf/components/sdmmc/include -I/home/radek/esp-idf/components/esp_driver_sdspi/include -I/home/radek/esp-idf/components/esp_driver_sdio/include -I/home/radek/esp-idf/components/esp_driver_dac/include -I/home/radek/esp-idf/components/esp_driver_rmt/include -I/home/radek/esp-idf/components/esp_driver_tsens/include -I/home/radek/esp-idf/components/esp_driver_sdm/include -I/home/radek/esp-idf/components/esp_driver_i2c/include -I/home/radek/esp-idf/components/esp_driver_uart/include -I/home/radek/esp-idf/components/vfs/include -I/home/radek/esp-idf/components/esp_driver_ledc/include -I/home/radek/esp-idf/components/esp_driver_parlio/include -I/home/radek/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/radek/esp-idf/components/nvs_flash/include -I/home/radek/esp-idf/components/esp_partition/include -I/home/radek/esp-idf/components/esp_http_client/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world=. -fmacro-prefix-map=/home/radek/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c /home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c
/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c: In function 'wifi_init_sta':
/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c:52:24: error: macro "ESP_LOGI" requires 3 arguments, but only 1 given
   52 |     ESP_LOGI(WIFI_EVENT)
      |                        ^
In file included from /home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c:5:
/home/radek/esp-idf/components/log/include/esp_log.h:114:9: note: macro "ESP_LOGI" defined here
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |         ^~~~~~~~
/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c:52:5: error: unknown type name 'ESP_LOGI'
   52 |     ESP_LOGI(WIFI_EVENT)
      |     ^~~~~~~~
/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c:54:19: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'wifi_config'
   54 |     wifi_config_t wifi_config = {
      |                   ^~~~~~~~~~~
In file included from /home/radek/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/radek/esp-idf/components/esp_hw_support/include/esp_cpu.h:20,
                 from /home/radek/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/radek/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/radek/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/radek/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c:2:
/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c:63:55: error: 'wifi_config' undeclared (first use in this function); did you mean 'wifi_config_t'?
   63 |     ESP_ERROR_CHECK(esp_wifi_set_config(WIFI_IF_STA, &wifi_config));
      |                                                       ^~~~~~~~~~~
/home/radek/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/radek/agh_przedmioty/rok_III/IoT/WiFi/hello_world/main/hello_world_main.c:63:55: note: each undeclared identifier is reported only once for each function it appears in
   63 |     ESP_ERROR_CHECK(esp_wifi_set_config(WIFI_IF_STA, &wifi_config));
      |                                                       ^~~~~~~~~~~
/home/radek/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
ninja: build stopped: subcommand failed.
